@@ -56,17 +56,22 @@ void *memmove(void *dest, const void *src, size_t count)
   if (dest <= src)
     {
       tmp = (char*) dest;
-      s = (char*) src;
+      s   = (char*) src;
       while (count--)
-	*tmp++ = *s++;
+        {
+	  *tmp++ = *s++;
+        }
     }
   else
     {
       tmp = (char*) dest + count;
-      s = (char*) src + count;
+      s   = (char*) src + count;
       while (count--)
-	*--tmp = *--s;
+        {
+	  *--tmp = *--s;
+        }
     }
+
   return dest;
 }
 #endif
